--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav {
   background-color: #333;
   grid-column: span 4;
   grid-row: 1;
-  padding: 20px;
+  padding: 20px 0;
 }
 
 nav p {
@@ -47,12 +47,10 @@ nav p {
   font-size: 36px;
   padding: 0;
   margin: 0;
-  float: left;
 }
 
 nav ul {
-  float: right;
-  list-style-type: none;
+  list-style: none;
   margin: 0;
   padding: 0; 
 }
@@ -129,7 +127,7 @@ button .active {
 @media only screen and (max-width: 768px) {
   .wrapper {
     grid-template-columns: 1fr 1fr;
-  grid-template-rows: 5em repeat(1, 1fr);
+  grid-template-rows: 8em repeat(1, 1fr);
   
   }
   
