--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   display: flex;
   flex: 1 1 auto;
   flex-wrap: wrap;
+  flex-direction: row;
   justify-content: space-around;
 }
 
@@ -252,6 +253,10 @@ also added flex properties to the  box class -> see .box above */
   flex: 1 1 auto;
   min-width: 300px;
   padding-top: 40px;
+}
+
+.movie p {
+  max-width: 300px;
 }
 
 .movie-child {
