--- a/style.css
+++ b/style.css
@@ -27,8 +27,7 @@ body {
 }
 
 a {
-  text-decoration: none;
-  color: #333;
+  color: #111;
 }
 
 p > a:hover {
@@ -48,6 +47,7 @@ nav a.brand {
   font-size: 36px;
   padding: 0;
   margin: 0;
+  text-decoration: none;
 }
 
 nav ul {
@@ -144,12 +144,15 @@ button .active {
 .modal-content {
     background-color: #fefefe;
     margin: auto;
-    padding: 20px;
+    padding: 0 20px 20px 20px;
     border: 1px solid #888;
     width: 50%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-duration: 0.5s;
-    animation-duration: 0.5s;
+    position: relative;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
 }
 
 /* The Close Button */
@@ -162,9 +165,20 @@ button .active {
 
 .close:hover,
 .close:focus {
-    color: #000;
+    color: #111;
     text-decoration: none;
     cursor: pointer;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
 }
 
 /* SEARCH */
@@ -265,4 +279,7 @@ input[type=search]:focus {
 }
   
 }
+
+
+
 
