--- a/style.css
+++ b/style.css
@@ -44,11 +44,21 @@ nav {
 
 nav a.brand {
   color: #fff;
+  /*text-shadow: 2px -2px #000;*/
   font-family: 'Oswald', sans-serif;
   font-size: 36px;
   padding: 0;
   margin: 0 50px 0 10px;
   text-decoration: none;
+  /**/
+  text-shadow:
+    0 1px 0px #000,
+    1px 0 0px #000,
+    1px 2px 1px #000,
+    2px 1px 1px #000,
+    2px 3px 2px #000,
+    3px 2px 2px #000,
+    3px 4px 2px #000;
 }
 
 nav ul {
@@ -100,6 +110,8 @@ nav li a:hover:before {
 footer {
   background-color: #f6f6f6;
   grid-column: span 1;
+  padding-top: 10px;
+  margin-top: 20px;
 }
 
 .text-center {
